--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,33 @@ docs/_build/
 # PyBuilder
 target/
 
+# React Stuff
+  
+.DS_STORE
+node_modules
+scripts/flow/*/.flowconfig
+*~
+*.pyc
+.grunt
+_SpecRunner.html
+__benchmarks__
+build/
+remote-repo/
+coverage/
+.module-cache
+fixtures/dom/public/react-dom.js
+fixtures/dom/public/react.js
+test/the-files-to-test.generated.js
+*.log*
+chrome-user-data
+*.sublime-project
+*.sublime-workspace
+.idea
+*.iml
+.vscode
+*.swp
+*.swo
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
